--- a/public/cms/css/pages/carousel.css
+++ b/public/cms/css/pages/carousel.css
@@ -417,7 +417,6 @@ table {
   left: 220px;
   bottom: 0;
   right: 0;
-  background-color: #f1f1f1;
   font-size: 14px;
 }
 #carousel_main .head {
@@ -460,7 +459,7 @@ table {
 }
 #carousel_main .carousel_table {
   width: 98%;
-  height: 670px;
+  height: 650px;
   border-radius: 4px;
   background: #F1F1F1;
   margin: 0 auto;
@@ -524,15 +523,13 @@ table {
   padding: 0 5px;
 }
 .addCarousel_dialog {
-  width: 560px;
-  border-radius: 20px;
+  width: 540px;
 }
 .addCarousel_dialog .addCarousel_dialog_main input {
-  width: 500px;
-  height: 40px;
-  line-height: 40px;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
   text-align: left;
   font-size: 18px;
   color: #5a5a5a;
-  padding-left: 10px;
 }
