--- a/public/cms/less/pages/carousel.less
+++ b/public/cms/less/pages/carousel.less
@@ -9,7 +9,7 @@
   left:220px;
   bottom:0;
   right: 0;
-  background-color: #f1f1f1;
+  //background-color: #f1f1f1;
   font-size:14px;
   .head{
     height:72px;
@@ -51,7 +51,7 @@
   }
   .carousel_table{
     width: 98%;
-    height: 670px;
+    height: 650px;
     border-radius: 4px;
     background: #F1F1F1;
     margin: 0 auto;
@@ -112,17 +112,15 @@
   }
 }
 .addCarousel_dialog{
-  width: 560px;
-  border-radius: 20px;
+  width: 540px;
   .addCarousel_dialog_main{
     input{
-      width: 500px;
-      height:40px;
-      line-height: 40px;
+      width: 100%;
+      height:30px;
+      line-height: 30px;
       text-align: left;
       font-size:18px;
       color:#5a5a5a;
-      padding-left: 10px;
     }
     >img{
 
