--- a/public/cms/less/pages/moduleMana.less
+++ b/public/cms/less/pages/moduleMana.less
@@ -10,7 +10,7 @@
   left:220px;
   bottom:0;
   right: 0;
-  background-color: #f1f1f1;
+  //background-color: #f1f1f1;
   font-size:14px;
   .head{
     .tab_ul{
@@ -55,7 +55,7 @@
   }
   .product_table{
     width: 98%;
-    height: 670px;
+    height: 650px;
     border-radius: 4px;
     background:#F1F1F1;
     margin:0 auto;
