--- a/public/cms/less/pages/userMana.less
+++ b/public/cms/less/pages/userMana.less
@@ -8,11 +8,11 @@
   left:220px;
   right:0;
   bottom:0;
-  background-color: #f1f1f1;
+  //background-color: #f1f1f1;
   font-size:14px;
   .user_table{
     width:98%;
-    height: 670px;
+    height: 710px;
     border-radius: 4px;
     background:#F1F1F1;
     margin:0 auto;
