--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -1,23 +1,15 @@
 @import "../common/reset";
 @import "../common/common";
 
-//@media screen and (min-width: 960px) {
-//  .carouselArea { background-color: green; }
-//}
-//
-//@media screen and (max-width: 960px) and (min-width: 500px) {
-//  .carouselArea { background-color: pink; }
-//}
-//
-//@media screen and (max-width: 500px) {
-//  .carouselArea { background-color: yellow; }
-//}
-
-
 #home_main{
   .carouselArea{
-    min-width: 1366px;
+    min-width: 100%;
     height: 342px;
+    overflow:hidden;
+    //img{
+    //  width:100%;
+    //  height:100%;
+    //}
   }
   .product_nav{
     width:1120px;
@@ -102,3 +94,19 @@
     margin:0 0 60px 0;
   }
 }
+
+@media screen and (max-width: 375px) {
+  #home_main{
+    .carouselArea {
+      height: 150px;
+    }
+  }
+}
+//
+//@media screen and (max-width: 960px) and (min-width: 500px) {
+//  .carouselArea { background-color: pink; }
+//}
+//
+//@media screen and (max-width: 500px) {
+//  .carouselArea { background-color: yellow; }
+//}
