--- a/public/cms/less/pages/carousel.less
+++ b/public/cms/less/pages/carousel.less
@@ -112,7 +112,8 @@
   }
 }
 .addCarousel_dialog{
-  width: 540px;
+  width:340px;
+  height:155px;
   .addCarousel_dialog_main{
     input{
       width: 100%;
