--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -14,31 +14,33 @@
       padding:0 97px;
       margin:0 0 40px 0;
       .primary{
-        height:30px;
+        height:35px;
         text-align:left;
+        background:#E8E8E8;
         position:relative;
         >li{
           cursor:pointer;
-          height:30px;
-          line-height:30px;
+          height:33px;
+          line-height:35px;
           text-align:center;
-          padding:0 5px;
-          margin:0 10px;
+          padding:0 15px;
+          border-top:2px solid #E8E8E8;
+          border-right:1px solid #ccc;
+          //margin:0 10px;
           float:left;
-          &:hover{
-            color: #25ba80;
-            .secondary{
-              display:block;
-              color:#5a5a5a;
-            }
-          }
+          //&:hover{
+          //  color: #25ba80;
+          //  .secondary{
+          //    display:block;
+          //    color:#5a5a5a;
+          //  }
+          //}
           .secondary{
             display:none;
             height:30px;
             text-align:left;
-            background:#E8E8E8;
             position:absolute;
-            top:30px;
+            top:35px;
             left:0;
             >li{
               height:20px;
