--- a/public/frontend/less/pages/login.less
+++ b/public/frontend/less/pages/login.less
@@ -142,14 +142,14 @@
       }
     }
   }
-  .forgetPasswordDialog{
+  .forgetPasswordDialog .el-dialog{
+    width: 500px;
     font-size:14px;
     button{
       padding:10px 20px;
     }
     .main{
-      width: 60%;
-      min-width: 150px;
+      width: 400px;
       margin: 0 auto;
       p {
         input{
