--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -204,6 +204,7 @@
     }
   }
 }
+
 //弹出框 强改样式
 .el-dialog{
   padding:15px 25px 0 25px;
@@ -275,7 +276,7 @@
   color:#fff;
   border: 1px solid #25ba80;
   background:#25ba80;
-  &:hover,&focus{
+  &:hover,&:focus{
     color:#fff;
     border: 1px solid #25ba80;
     background: #25ba80;
