--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -372,7 +372,7 @@ table {
   background: #25ba80;
 }
 .el-button--primary:hover,
-.el-button--primaryfocus {
+.el-button--primary:focus {
   color: #fff;
   border: 1px solid #25ba80;
   background: #25ba80;
