--- a/public/frontend/css/pages/login.css
+++ b/public/frontend/css/pages/login.css
@@ -372,7 +372,7 @@ table {
   background: #25ba80;
 }
 .el-button--primary:hover,
-.el-button--primaryfocus {
+.el-button--primary:focus {
   color: #fff;
   border: 1px solid #25ba80;
   background: #25ba80;
@@ -517,34 +517,23 @@ table {
   margin: 0 0 25px 0;
   background: #fff;
 }
-#login_main .forgetPasswordDialog .el-dialog {
-  width: 500px;
-  font-size: 14px;
+.forgetPass_dialog {
+  width: 350px;
 }
-#login_main .forgetPasswordDialog .el-dialog button {
-  padding: 10px 20px;
+.forgetPass_dialog .forgetPass_dialog_main p {
+  margin-bottom: 10px;
 }
-#login_main .forgetPasswordDialog .el-dialog .main {
-  width: 400px;
-  margin: 0 auto;
+.forgetPass_dialog .forgetPass_dialog_main p input {
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  text-indent: 10px;
 }
-#login_main .forgetPasswordDialog .el-dialog .main p {
-  margin-top: 10px;
+.forgetPass_dialog .forgetPass_dialog_main p button {
+  height: 30px;
+  line-height: 30px;
+  padding: 0 10px;
 }
-#login_main .forgetPasswordDialog .el-dialog .main p input {
-  box-sizing: border-box;
-}
-#login_main .forgetPasswordDialog .el-dialog .main p .firstInput {
-  width: 60%;
-}
-#login_main .forgetPasswordDialog .el-dialog .main p .secondInput {
-  width: 100% ;
-}
-#login_main .forgetPasswordDialog .el-dialog .main p:nth-of-type(1) button {
-  float: right;
-  color: #5a5a5a;
-}
-#login_main .forgetPasswordDialog .el-dialog .dialog-footer button {
-  color: #fff!important;
-  font-size: 18px!important;
+.forgetPass_dialog .forgetPass_dialog_main p:nth-of-type(2) input {
+  width: 200px;
 }
