--- a/public/frontend/less/pages/login.less
+++ b/public/frontend/less/pages/login.less
@@ -142,39 +142,29 @@
       }
     }
   }
-  .forgetPasswordDialog .el-dialog{
-    width: 500px;
-    font-size:14px;
-    button{
-      padding:10px 20px;
-    }
-    .main{
-      width: 400px;
-      margin: 0 auto;
-      p {
-        input{
-          box-sizing: border-box;
-        }
-        margin-top: 10px;
-        .firstInput{
-          width:60%;
-        }
-        .secondInput{
-          width:100% ;
-        }
+}
+.forgetPass_dialog{
+  width:350px;
+  //height:240px;
+  .forgetPass_dialog_main{
+    p{
+      margin-bottom:10px;
+      input{
+        width:100%;
+        height:30px;
+        line-height:30px;
+        text-indent:10px;
       }
-      p:nth-of-type(1){
-        button{
-          float: right;
-          color: #5a5a5a;
-        }
+      button{
+        height:30px;
+        line-height:30px;
+        padding:0 10px;
       }
     }
-    .dialog-footer{
-        button {
-          color: #fff!important;
-          font-size: 18px!important;
-        }
+    p:nth-of-type(2){
+      input{
+        width:200px;
+      }
     }
   }
 }
