--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -99,19 +99,19 @@ table {
   height: 56px;
   position: relative;
 }
-#topBar .logo {
+#topBar .topBar_pc .logo {
   width: 36px;
   height: 30px;
   position: absolute;
   top: 13px;
   left: 78px;
 }
-#topBar .topBar_menu {
+#topBar .topBar_pc .topBar_menu {
   width: 560px;
   height: 56px;
   margin: 0 auto;
 }
-#topBar .topBar_menu li {
+#topBar .topBar_pc .topBar_menu li {
   cursor: pointer;
   height: 40px;
   line-height: 56px;
@@ -120,24 +120,24 @@ table {
   float: left;
   position: relative;
 }
-#topBar .topBar_menu li:hover {
+#topBar .topBar_pc .topBar_menu li:hover {
   color: #25ba80;
   border-bottom: 1px solid #25ba80;
 }
-#topBar .topBar_menu li.active {
+#topBar .topBar_pc .topBar_menu li.active {
   color: #25ba80;
   border-bottom: 1px solid #25ba80;
 }
-#topBar .topBar_right {
+#topBar .topBar_pc .topBar_right {
   position: absolute;
   top: 15px;
   right: 35px;
 }
-#topBar .topBar_right .search {
+#topBar .topBar_pc .topBar_right .search {
   display: inline-block;
   position: relative;
 }
-#topBar .topBar_right .search input {
+#topBar .topBar_pc .topBar_right .search input {
   box-sizing: border-box;
   width: 180px;
   height: 26px;
@@ -147,7 +147,7 @@ table {
   border: solid 1px #5a5a5a;
   outline: none;
 }
-#topBar .topBar_right .search .search_icon {
+#topBar .topBar_pc .topBar_right .search .search_icon {
   display: inline-block;
   width: 15px;
   height: 15px;
@@ -157,7 +157,7 @@ table {
   top: 5px;
   right: 8px;
 }
-#topBar .topBar_right .user_icon {
+#topBar .topBar_pc .topBar_right .user_icon {
   display: inline-block;
   cursor: pointer;
   width: 16px;
@@ -168,24 +168,99 @@ table {
   position: relative;
   top: 3px;
 }
-#topBar .topBar_right .user_info {
+#topBar .topBar_pc .topBar_right .user_info {
   display: inline-block;
   margin: 0 0 0 10px;
 }
-#topBar .topBar_right .user_info > img {
+#topBar .topBar_pc .topBar_right .user_info > img {
   width: 20px;
   height: 20px;
   position: relative;
   top: 4px;
 }
-#topBar .topBar_right .user_info > span {
+#topBar .topBar_pc .topBar_right .user_info > span {
   cursor: pointer;
   margin: 0 5px;
 }
-#topBar .topBar_right .user_info > span:hover {
+#topBar .topBar_pc .topBar_right .user_info > span:hover {
   color: #25ba80;
 }
-#topBar .topBar_right .user_info .quit_icon {
+#topBar .topBar_pc .topBar_right .user_info .quit_icon {
+  cursor: pointer;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background: url('/images/quit_icon.png') no-repeat;
+  background-size: 16px 16px;
+  position: relative;
+  top: 2px;
+}
+#topBar .topBar_wap {
+  display: none;
+  position: relative;
+}
+#topBar .topBar_wap .nav {
+  position: absolute;
+  top: 0px;
+  left: 15px;
+  z-index: 999;
+}
+#topBar .topBar_wap .nav .nav_img {
+  width: 40px;
+  height: 40px;
+}
+#topBar .topBar_wap .nav .topBar_menu {
+  background: #fff;
+  position: absolute;
+  top: 40px;
+  left: 0;
+}
+#topBar .topBar_wap .nav .topBar_menu li {
+  height: 25px;
+  line-height: 25px;
+}
+#topBar .topBar_wap .search {
+  width: 180px;
+  margin: 0 auto;
+  position: relative;
+}
+#topBar .topBar_wap .search input {
+  box-sizing: border-box;
+  width: 180px;
+  height: 26px;
+  text-indent: 15px;
+  padding: 0 30px 0 0;
+  border-radius: 14px;
+  border: solid 1px #5a5a5a;
+  outline: none;
+}
+#topBar .topBar_wap .search .search_icon {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background: url('/images/search_icon.png') no-repeat;
+  background-size: 15px 15px;
+  position: absolute;
+  top: 5px;
+  right: 8px;
+}
+#topBar .topBar_wap .info {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+}
+#topBar .topBar_wap .info .user_icon {
+  display: inline-block;
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0;
+  background: url('/images/user_icon.png') no-repeat;
+  background-size: 16px 16px;
+  position: relative;
+  top: 2px;
+}
+#topBar .topBar_wap .info .quit_icon {
   cursor: pointer;
   display: inline-block;
   width: 16px;
@@ -301,6 +376,24 @@ table {
   font-size: 16px;
   margin: 0 0 20px 0;
 }
+@media screen and (max-width: 414px) {
+  #topBar {
+    min-width: 100%;
+    height: 44px;
+  }
+  #topBar .topBar_pc {
+    display: none;
+  }
+  #topBar .topBar_wap {
+    display: block;
+  }
+  #topBar .topBar_wap .search {
+    top: 11px;
+  }
+  #footer {
+    display: none;
+  }
+}
 .el-dialog {
   padding: 15px 25px 0 25px;
   margin: 0;
@@ -404,13 +497,14 @@ table {
   height: 280px;
   overflow: hidden;
   float: left;
+  position: relative;
 }
 #home_main .product_nav .oneProduct_nav .oneProduct_nav_img {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
 }
 #home_main .product_nav .oneProduct_nav .oneProduct_nav_img > img {
-  width: 280px;
-  height: 280px;
+  width: 100%;
+  height: 100%;
   transition: 2s;
   -moz-transition: 2s;
   /* Firefox 4 */
@@ -423,9 +517,13 @@ table {
   transform: scale(1.3);
 }
 #home_main .product_nav .oneProduct_nav .oneProduct_nav_desc > h4 {
+  width: 100%;
   font-size: 18px;
   text-align: center;
-  margin: 131px 0;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
 }
 #home_main .product_sell,
 #home_main .product_recom {
@@ -437,6 +535,7 @@ table {
   height: 35px;
   line-height: 35px;
   font-size: 20px;
+  text-align: center;
   color: #585858;
   margin: 0 0 20px 0;
 }
@@ -457,28 +556,52 @@ table {
 }
 #home_main .product_sell .oneProduct .oneProduct_img,
 #home_main .product_recom .oneProduct .oneProduct_img {
-  width: 271px;
-  height: 271px;
+  width: 100%;
+  height: 82%;
 }
 #home_main .product_sell .oneProduct .oneProduct_img > img,
 #home_main .product_recom .oneProduct .oneProduct_img > img {
-  width: 271px;
-  height: 271px;
+  width: 100%;
+  height: 100%;
 }
 #home_main .product_sell .oneProduct .oneProduct_desc,
 #home_main .product_recom .oneProduct .oneProduct_desc {
   box-sizing: border-box;
-  width: 271px;
-  height: 60px;
-  line-height: 40px;
-  padding: 10px;
+  width: 100%;
+  height: 18%;
+  text-align: center;
+  padding: 10px 0 0 0;
   background-color: #E8E8E8;
 }
 #home_main .product_recommend {
   margin: 0 0 60px 0;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 414px) {
   #home_main .carouselArea {
     height: 150px;
+  }
+  #home_main .product_nav {
+    width: 100%;
+  }
+  #home_main .product_nav .oneProduct_nav {
+    width: 100%;
+    height: 175px;
+    margin-bottom: 10px;
+  }
+  #home_main .product_nav .oneProduct_nav .oneProduct_nav_img,
+  #home_main .product_nav .oneProduct_nav .oneProduct_nav_desc {
+    width: 175px;
+    height: 175px;
+  }
+  #home_main .product_sell,
+  #home_main .product_recom {
+    text-align: left;
+  }
+  #home_main .product_sell .oneProduct,
+  #home_main .product_recom .oneProduct {
+    display: inline-block;
+    width: 187px;
+    height: 246px;
+    margin: 0 2px 5px 0;
   }
 }
