--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -6,41 +6,132 @@
   min-width: 1366px;
   height: 56px;
   position: relative;
-  .logo {
-    width: 36px;
-    height: 30px;
-    position: absolute;
-    top: 13px;
-    left: 78px;
-  }
-  .topBar_menu {
-    width: 560px;
-    height: 56px;
-    margin: 0 auto;
-    li {
-      cursor: pointer;
-      height: 40px;
-      line-height: 56px;
-      text-align: center;
-      margin: 0 30px;
-      float: left;
-      position: relative;
-      &:hover {
+  .topBar_pc{
+    .logo {
+      width: 36px;
+      height: 30px;
+      position: absolute;
+      top: 13px;
+      left: 78px;
+    }
+    .topBar_menu {
+      width: 560px;
+      height: 56px;
+      margin: 0 auto;
+      li {
+        cursor: pointer;
+        height: 40px;
+        line-height: 56px;
+        text-align: center;
+        margin: 0 30px;
+        float: left;
+        position: relative;
+        &:hover {
+          color: #25ba80;
+          border-bottom: 1px solid #25ba80;
+        }
+      }
+      li.active{
         color: #25ba80;
         border-bottom: 1px solid #25ba80;
       }
     }
-    li.active{
-      color: #25ba80;
-      border-bottom: 1px solid #25ba80;
+    .topBar_right {
+      position: absolute;
+      top: 15px;
+      right: 35px;
+      .search {
+        display: inline-block;
+        position: relative;
+        input {
+          box-sizing: border-box;
+          width: 180px;
+          height: 26px;
+          text-indent: 15px;
+          padding: 0 30px 0 0;
+          border-radius: 14px;
+          border: solid 1px #5a5a5a;
+          outline: none;
+        }
+        .search_icon {
+          display: inline-block;
+          width: 15px;
+          height: 15px;
+          background: url('/images/search_icon.png') no-repeat;
+          background-size:15px 15px;
+          position: absolute;
+          top: 5px;
+          right: 8px;
+        }
+      }
+      .user_icon {
+        display: inline-block;
+        cursor: pointer;
+        width: 16px;
+        height: 16px;
+        margin: 0 0 0 20px;
+        background: url('/images/user_icon.png') no-repeat;
+        background-size: 16px 16px;
+        position: relative;
+        top: 3px;
+      }
+      .user_info{
+        display:inline-block;
+        margin:0 0 0 10px;
+        >img{
+          width:20px;
+          height:20px;
+          position:relative;
+          top:4px;
+        }
+        >span{
+          cursor:pointer;
+          margin:0 5px;
+          &:hover{
+            color:#25ba80;
+          }
+        }
+        .quit_icon{
+          cursor:pointer;
+          display:inline-block;
+          width:16px;
+          height:16px;
+          background: url('/images/quit_icon.png') no-repeat;
+          background-size: 16px 16px;
+          position:relative;
+          top:2px;
+        }
+      }
     }
   }
-  .topBar_right {
-    position: absolute;
-    top: 15px;
-    right: 35px;
+  .topBar_wap{
+    display:none;
+    //overflow:hidden;
+    position:relative;
+    .nav{
+      position:absolute;
+      top:0px;
+      left:15px;
+      z-index:999;
+      .nav_img{
+        width:40px;
+        height:40px;
+      }
+      .topBar_menu{
+        //display:none;
+        background:#fff;
+        position:absolute;
+        top:40px;
+        left:0;
+        li{
+          height:25px;
+          line-height:25px;
+        }
+      }
+    }
     .search {
-      display: inline-block;
+      width:180px;
+      margin:0 auto;
       position: relative;
       input {
         box-sizing: border-box;
@@ -63,42 +154,30 @@
         right: 8px;
       }
     }
-    .user_icon {
-      display: inline-block;
-      cursor: pointer;
-      width: 16px;
-      height: 16px;
-      margin: 0 0 0 20px;
-      background: url('/images/user_icon.png') no-repeat;
-      background-size: 16px 16px;
-      position: relative;
-      top: 3px;
-    }
-    .user_info{
-      display:inline-block;
-      margin:0 0 0 10px;
-      >img{
-        width:20px;
-        height:20px;
-        position:relative;
-        top:4px;
+    .info{
+      position:absolute;
+      top:15px;
+      right:10px;
+      .user_icon {
+        display: inline-block;
+        cursor: pointer;
+        width: 16px;
+        height: 16px;
+        margin: 0 10px 0 0;
+        background: url('/images/user_icon.png') no-repeat;
+        background-size: 16px 16px;
+        position: relative;
+        top: 2px;
       }
-      >span{
+      .quit_icon{
         cursor:pointer;
-        margin:0 5px;
-        &:hover{
-          color:#25ba80;
-        }
-      }
-     .quit_icon{
-       cursor:pointer;
-       display:inline-block;
-       width:16px;
-       height:16px;
-       background: url('/images/quit_icon.png') no-repeat;
-       background-size: 16px 16px;
-       position:relative;
-       top:2px;
+        display:inline-block;
+        width:16px;
+        height:16px;
+        background: url('/images/quit_icon.png') no-repeat;
+        background-size: 16px 16px;
+        position:relative;
+        top:2px;
       }
     }
   }
@@ -205,6 +284,26 @@
   }
 }
 
+//响应式布局
+@media screen and (max-width: 414px) {
+  #topBar{
+    min-width:100%;
+    height: 44px;
+    .topBar_pc{
+      display:none;
+    }
+    .topBar_wap{
+      display:block;
+      .search{
+        top:11px;
+      }
+    }
+  }
+  #footer{
+    display:none;
+  }
+}
+
 //弹出框 强改样式
 .el-dialog{
   padding:15px 25px 0 25px;
@@ -289,3 +388,4 @@
 .el-loading-spinner .el-loading-text{
   color:#25ba80;
 }
+
