--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -118,7 +118,7 @@
         height:40px;
       }
       .topBar_menu{
-        //display:none;
+        display:none;
         background:#fff;
         position:absolute;
         top:40px;
