--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -210,6 +210,7 @@ table {
   height: 40px;
 }
 #topBar .topBar_wap .nav .topBar_menu {
+  display: none;
   background: #fff;
   position: absolute;
   top: 40px;
@@ -600,8 +601,8 @@ table {
   #home_main .product_sell .oneProduct,
   #home_main .product_recom .oneProduct {
     display: inline-block;
-    width: 187px;
-    height: 246px;
+    width: 185px;
+    height: 230px;
     margin: 0 2px 5px 0;
   }
 }
