--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -6,10 +6,6 @@
     min-width: 100%;
     height: 342px;
     overflow:hidden;
-    //img{
-    //  width:100%;
-    //  height:100%;
-    //}
   }
   .product_nav{
     width:1120px;
@@ -102,7 +98,7 @@
   }
 }
 
-//以下是响应式布局
+//响应式布局
 @media screen and (max-width: 414px) {
   #home_main{
     .carouselArea {
@@ -124,8 +120,8 @@
       text-align:left;
       .oneProduct {
         display: inline-block;
-        width: 187px;
-        height: 246px;
+        width: 185px;
+        height: 230px;
         margin: 0 2px 5px 0;
       }
     }
