联系页和支持中心页自适应

--- a/public/frontend/css/pages/contact.css
+++ b/public/frontend/css/pages/contact.css
@@ -498,3 +498,8 @@ table {
   width: 49%;
   text-align: center;
 }
+@media screen and (max-width: 414px) {
+  #contact_main {
+    margin: 10px 0 0 0;
+  }
+}
