--- a/public/frontend/css/pages/support.css
+++ b/public/frontend/css/pages/support.css
@@ -563,19 +563,19 @@ input {
 #support_main .service-nav li {
   display: inline-block;
   cursor: pointer;
-  vertical-align: top;
-  float: left;
   color: #5a5a5a;
   width: 50%;
-  height: 93px;
+  height: 100%;
+  vertical-align: top;
+  float: left;
 }
 #support_main .service-nav li .refunds-icon {
   background: url("/images/refunds_exchanges.png") no-repeat;
-  background-size: 40px 40px;
+  background-size: 100% 100%;
 }
 #support_main .service-nav li .warranty-icon {
   background: url("/images/warranty.png") no-repeat;
-  background-size: 40px 40px;
+  background-size: 100% 100%;
 }
 #support_main .service-nav li i {
   display: block;
@@ -584,10 +584,8 @@ input {
   width: 40px;
 }
 #support_main .service-nav li p {
-  height: 18px;
-  margin-top: 10px;
-  line-height: 18px;
   text-align: center;
+  margin-top: 10px;
 }
 #support_main .service-nav .active {
   background-color: #25ba80;
@@ -598,18 +596,18 @@ input {
 }
 #support_main .service-nav .active .refunds-icon {
   background: url("/images/refunds_exchanges_1.png") no-repeat;
-  background-size: 40px 40px;
+  background-size: 100% 100%;
 }
 #support_main .service-nav .active .warranty-icon {
   background: url("/images/warranty_1.png") no-repeat;
-  background-size: 40px 40px;
+  background-size: 100% 100%;
 }
 #support_main .module-container .refunds {
-  width: 993px;
+  width: 90%;
   margin: 40px auto 10px auto;
 }
 #support_main .module-container .refunds .refunds-form {
-  width: 993px;
+  width: 100%;
 }
 #support_main .module-container .refunds .refunds-form .item-title {
   font-size: 18px;
@@ -618,7 +616,7 @@ input {
 }
 #support_main .module-container .refunds .refunds-form .order > input,
 #support_main .module-container .refunds .refunds-form .issue > input {
-  width: 983px;
+  width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid #ccc;
@@ -627,7 +625,7 @@ input {
 #support_main .module-container .refunds .refunds-form .order > textarea,
 #support_main .module-container .refunds .refunds-form .issue > textarea {
   box-sizing: border-box;
-  width: 983px;
+  width: 100%;
   height: 80px;
   border-radius: 4px;
   border: solid 1px #cccccc;
@@ -694,4 +692,24 @@ input {
   margin-top: 30px;
   margin-bottom: 30px;
   color: #5a5a5a;
+}
+@media screen and (max-width: 414px) {
+  #support_main {
+    width: 100%;
+  }
+  #support_main .banner-container {
+    height: 200px;
+  }
+  #support_main .service-nav {
+    width: 100%;
+    height: 60px;
+  }
+  #support_main .service-nav li i {
+    width: 30px;
+    height: 30px;
+    margin: 5px auto 0 auto;
+  }
+  #support_main .service-nav li p {
+    margin-top: 5px;
+  }
 }
