--- a/public/frontend/less/pages/support.less
+++ b/public/frontend/less/pages/support.less
@@ -88,18 +88,18 @@ input {
     li {
       display: inline-block;
       cursor: pointer;
-      vertical-align: top;
-      float: left;
       color: #5a5a5a;
       width: 50%;
-      height: 93px;
+      height:100%;
+      vertical-align: top;
+      float: left;
       .refunds-icon {
         background: url("/images/refunds_exchanges.png") no-repeat;
-        background-size: 40px 40px;
+        background-size: 100% 100%;
       }
       .warranty-icon {
         background: url("/images/warranty.png") no-repeat;
-        background-size: 40px 40px;
+        background-size: 100% 100%;
       }
       i {
         display: block;
@@ -108,26 +108,9 @@ input {
         width: 40px;
       }
       p {
-        height: 18px;
-        margin-top: 10px;
-        line-height: 18px;
         text-align: center;
+        margin-top: 10px;
       }
-      //&:hover {
-      //  background-color: #25ba80;
-      //  p {
-      //    color: #fff;
-      //  }
-      //  cursor: pointer;
-      //  .refunds-icon {
-      //    background: url("../../../images/refunds_exchanges_1.png") no-repeat;
-      //    background-size: 40px 40px;
-      //  }
-      //  .warranty-icon {
-      //    background: url("../../../images/warranty_1.png") no-repeat;
-      //    background-size: 40px 40px;
-      //  }
-      //}
     }
     .active {
       background-color: #25ba80;
@@ -137,20 +120,20 @@ input {
       }
       .refunds-icon {
         background: url("/images/refunds_exchanges_1.png") no-repeat;
-        background-size: 40px 40px;
+        background-size: 100% 100%;
       }
       .warranty-icon {
         background: url("/images/warranty_1.png") no-repeat;
-        background-size: 40px 40px;
+        background-size: 100% 100%;
       }
     }
   }
   .module-container {
     .refunds {
-      width: 993px;
+      width: 90%;
       margin: 40px auto 10px auto;
       .refunds-form {
-        width: 993px;
+        width: 100%;
         .item-title {
           font-size: 18px;
           color: #333333;
@@ -158,7 +141,7 @@ input {
         }
         .order,.issue{
           >input{
-            width: 983px;
+            width: 100%;
             height: 40px;
             border-radius: 4px;
             border: 1px solid #ccc;
@@ -166,7 +149,7 @@ input {
           }
           >textarea{
             box-sizing:border-box;
-            width: 983px;
+            width: 100%;
             height: 80px;
             border-radius: 4px;
             border: solid 1px #cccccc;
@@ -244,4 +227,26 @@ input {
   }
 }
 
-
+//响应式布局
+@media screen and (max-width: 414px) {
+  #support_main{
+    width:100%;
+    .banner-container{
+      height:200px;
+    }
+    .service-nav{
+      width:100%;
+      height:60px;
+      li{
+        i{
+          width:30px;
+          height:30px;
+          margin: 5px auto 0 auto;
+        }
+        p{
+          margin-top: 5px;
+        }
+      }
+    }
+  }
+}
