--- a/public/frontend/css/pages/login.css
+++ b/public/frontend/css/pages/login.css
@@ -477,21 +477,12 @@ table {
 .el-loading-spinner .el-loading-text {
   color: #25ba80;
 }
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-.clearfix {
-  zoom: 1;
-}
 #login_main {
   min-width: 1366px;
   height: 700px;
   background: url("/images/login_bg.png") no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
+  overflow: hidden;
   position: relative;
 }
 #login_main .login_box {
@@ -504,67 +495,41 @@ table {
   right: 121px;
   top: 74px;
 }
-#login_main .login_box .welcome {
+#login_main .login_box .login_header {
   font-size: 48px;
   text-align: center;
-  margin: 30px 0 35px 0;
+  padding: 30px 0 35px 0;
 }
-#login_main .login_box ul {
+#login_main .login_box .login_info {
   font-size: 18px;
-  list-style: none;
 }
-#login_main .login_box ul input {
-  box-sizing: border-box;
-  height: 48px;
-}
-#login_main .login_box ul li {
+#login_main .login_box .login_info > p {
   margin-bottom: 25px;
 }
-#login_main .login_box ul li .form-td {
-  float: left;
-}
-#login_main .login_box ul .li1,
-#login_main .login_box ul .li2 {
+#login_main .login_box .login_info > p:nth-of-type(1) input,
+#login_main .login_box .login_info > p:nth-of-type(2) input {
+  width: 100%;
   height: 50px;
-  border: 1px solid #5a5a5a;
-  border-radius: 3px;
-}
-#login_main .login_box ul .li1 .line,
-#login_main .login_box ul .li2 .line {
-  display: inline-block;
-  width: 1px;
-  height: 39px;
-  background-color: #5a5a5a;
-  margin: 5px 0;
-}
-#login_main .login_box ul .li1 input,
-#login_main .login_box ul .li2 input {
-  width: 390px;
-  padding-left: 25px;
-  line-height: 1px;
   font-size: 18px;
-  border: 0 solid transparent;
+  text-indent: 44px;
+  border-radius: 4px;
+  border: solid 1px #5a5a5a;
 }
-#login_main .login_box ul .li1 input:focus,
-#login_main .login_box ul .li2 input:focus {
-  outline: none;
+#login_main .login_box .login_info > p:nth-of-type(1) input {
+  background: url('/images/user.png') no-repeat;
+  background-position: 10px 13px;
+  background-size: 25px 25px;
 }
-#login_main .login_box ul .li1 .username-icon {
-  height: 25px;
-  width: 25px;
-  margin: 12px;
+#login_main .login_box .login_info > p:nth-of-type(2) input {
+  background: url('/images/password.png') no-repeat 10px 13px;
+  background-position: 10px 13px;
+  background-size: 20px 24px;
 }
-#login_main .login_box ul .li2 .password-icon {
-  width: 20px;
-  height: 24px;
-  margin: 14px;
-}
-#login_main .login_box ul .li3 span:first-child a {
-  text-decoration: underline;
+#login_main .login_box .login_info > p:nth-of-type(3) {
+  display: inline-block;
+  cursor: pointer;
   color: #5a5a5a;
-}
-#login_main .login_box ul .li3 span:nth-of-type(2) input {
-  vertical-align: middle;
+  text-decoration: underline;
 }
 #login_main .login_box .btns .loginBtn {
   cursor: pointer;
@@ -622,6 +587,7 @@ table {
   height: 30px;
   line-height: 30px;
   text-indent: 10px;
+  border: solid 1px #5a5a5a;
 }
 .forgetPass_dialog .forgetPass_dialog_main p button {
   height: 30px;
@@ -630,4 +596,38 @@ table {
 }
 .forgetPass_dialog .forgetPass_dialog_main p:nth-of-type(2) input {
   width: 200px;
+}
+@media screen and (max-width: 414px) {
+  #login_main {
+    min-width: 100%;
+    height: 600px;
+  }
+  #login_main .login_box {
+    width: 320px;
+    height: 400px;
+    padding: 0 20px;
+    margin: 60px auto 0 auto;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  #login_main .login_box .login_header {
+    font-size: 38px;
+    padding: 15px 0 20px 0;
+  }
+  #login_main .login_box .login_info > p:nth-of-type(1) input,
+  #login_main .login_box .login_info > p:nth-of-type(2) input {
+    height: 40px;
+  }
+  #login_main .login_box .login_info > p:nth-of-type(1) input {
+    background-position: 10px 8px;
+  }
+  #login_main .login_box .login_info > p:nth-of-type(2) input {
+    background-position: 10px 8px;
+  }
+  #login_main .login_box .btns .loginBtn,
+  #login_main .login_box .btns .or_text,
+  #login_main .login_box .btns .registerBtn {
+    margin: 0 0 10px 0;
+  }
 }
