--- a/public/frontend/less/pages/login.less
+++ b/public/frontend/less/pages/login.less
@@ -1,22 +1,12 @@
 @import "../common/reset";
 @import "../common/common";
 
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-.clearfix {
-  zoom: 1;
-}
-
 #login_main{
   min-width:1366px;
   height: 700px;
   background:url("/images/login_bg.png") no-repeat;
-  background-size:100% 100%;
+  background-size:cover;
+  overflow:hidden;
   position: relative;
   .login_box{
     box-sizing:border-box;
@@ -27,71 +17,44 @@
     position: absolute;
     right:121px;
     top:74px;
-    .welcome{
+    .login_header{
       font-size: 48px;
       text-align:center;
-      margin:30px 0 35px 0;
+      padding:30px 0 35px 0;
     }
-    ul{
+    .login_info{
       font-size:18px;
-      list-style: none;
-      input{
-        box-sizing: border-box;
-        height: 48px;
-      }
-      li {
+      >p {
         margin-bottom:25px;
-        .form-td {
-          float: left;
-        }
-      }
-      .li1,.li2{
-        height: 50px;
-        border: 1px solid #5a5a5a;
-        border-radius: 3px;
-        .line{
-          display: inline-block;
-          width: 1px;
-          height: 39px;
-          background-color: #5a5a5a;
-          margin: 5px 0;
-        }
-        input{
-          width: 390px;
-          padding-left: 25px;
-          line-height: 1px;
-          font-size:18px;
-          border:0 solid transparent;
-        }
-        input:focus{
-          outline:none;
-        }
-      }
-      .li1{
-        .username-icon {
-          height: 25px;
-          width: 25px;
-          margin: 12px;
-        }
-      }
-      .li2{
-        .password-icon{
-          width: 20px;
-          height: 24px;
-          margin: 14px;
-        }
-      }
-      .li3{
-        span:first-child{
-          a{
-            text-decoration:underline;
-            color:#5a5a5a;
-          }
-        }
-        span:nth-of-type(2){
+        &:nth-of-type(1),&:nth-of-type(2){
           input{
-            vertical-align: middle;
+            width: 100%;
+            height:50px;
+            font-size:18px;
+            text-indent:44px;
+            border-radius: 4px;
+            border: solid 1px #5a5a5a;
           }
+        }
+        &:nth-of-type(1){
+          input{
+            background:url('/images/user.png') no-repeat;
+            background-position:10px 13px;
+            background-size:25px 25px;
+          }
+        }
+        &:nth-of-type(2){
+          input{
+            background:url('/images/password.png') no-repeat 10px 13px;
+            background-position:10px 13px;
+            background-size:20px 24px;
+          }
+        }
+        &:nth-of-type(3){
+          display:inline-block;
+          cursor:pointer;
+          color:#5a5a5a;
+          text-decoration:underline;
         }
       }
     }
@@ -154,6 +117,7 @@
         height:30px;
         line-height:30px;
         text-indent:10px;
+        border: solid 1px #5a5a5a;
       }
       button{
         height:30px;
@@ -164,6 +128,51 @@
     p:nth-of-type(2){
       input{
         width:200px;
+      }
+    }
+  }
+}
+
+//响应式布局
+@media screen and (max-width: 414px) {
+  #login_main{
+    min-width:100%;
+    height:600px;
+    .login_box{
+      width:320px;
+      height:400px;
+      padding:0 20px;
+      margin:60px auto 0 auto;
+      position:relative;
+      top:0;
+      left:0;
+      .login_header{
+        font-size: 38px;
+        padding: 15px 0 20px 0;
+      }
+      .login_info{
+        >p{
+          &:nth-of-type(1),&:nth-of-type(2){
+            input{
+              height:40px;
+            }
+          }
+          &:nth-of-type(1){
+            input{
+              background-position:10px 8px;
+            }
+          }
+          &:nth-of-type(2){
+            input{
+              background-position:10px 8px;
+            }
+          }
+        }
+      }
+      .btns{
+        .loginBtn,.or_text,.registerBtn{
+          margin: 0 0 10px 0;
+        }
       }
     }
   }
