--- a/public/frontend/less/pages/register.less
+++ b/public/frontend/less/pages/register.less
@@ -6,7 +6,8 @@
   min-width: 1366px;
   height: 700px;
   background:url("/images/login_bg.png") no-repeat;
-  background-size:100% 100%;
+  background-size:cover;
+  overflow:hidden;
   position: relative;
   .register_box{
     box-sizing:border-box;
@@ -17,62 +18,46 @@
     position: absolute;
     right:121px;
     top:74px;
-    .register-header{
+    .register_header{
       height: 40px;
       line-height: 40px;
       font-size: 48px;
       text-align:center;
-      margin:74px 0 51px 0;
+      padding:74px 0 51px 0;
     }
-    ul{
-      width: 447px;
+    .register_info{
+      width: 100%;
       margin:0 auto;
       list-style: none;
-      li {
-        box-sizing: border-box;
-        height: 49px;
-        border: 1px solid #5a5a5a;
+      >p {
         margin:0 0 28px 0;
-        .user-icon {
-          width:25px;
-          height: 25px;
-          vertical-align: middle;
-          margin: 12px;
-        }
-        .password-icon{
-          width:20px;
-          height: 24px;
-          vertical-align: middle;
-          margin: 14px;
-
-        }
-        .again-icon{
-          width:23px;
-          height: 24px;
-          vertical-align: middle;
-          margin: 12px;
-        }
-
-        .vline {
-          vertical-align: middle;
-          display: inline-block;
-          width: 1px;
-          background-color: #5a5a5a;
-          height: 39px;
-          margin: 5px 0 5px 0;
-        }
         input {
-          vertical-align: top;
-          box-sizing: border-box;
-          width: 380px;
-          height: 47px;
-          border: 0px solid transparent;
-          border-radius: 3px;
+          width: 100%;
+          height: 50px;
           font-size: 18px;
-          line-height: 47px;
-          padding-left: 25px;
-          &:focus{
-            outline:none;
+          text-indent:44px;
+          border-radius: 4px;
+          border: solid 1px #5a5a5a;
+        }
+        &:nth-of-type(1){
+          input{
+            background:url('/images/user.png') no-repeat;
+            background-position:10px 13px;
+            background-size:25px 25px;
+          }
+        }
+        &:nth-of-type(2){
+          input{
+            background:url('/images/password.png') no-repeat;
+            background-position:10px 13px;
+            background-size:20px 24px;
+          }
+        }
+        &:nth-of-type(3){
+          input{
+            background:url('/images/again.png') no-repeat;
+            background-position:10px 13px;
+            background-size:23px 24px;
           }
         }
       }
@@ -89,3 +74,32 @@
     }
   }
 };
+
+//响应式布局
+@media screen and (max-width: 414px) {
+  #register_main{
+    min-width: 100%;
+    height: 600px;
+    .register_box{
+      width:320px;
+      height:400px;
+      padding:0 20px;
+      margin:60px auto 0 auto;
+      position:relative;
+      top:0;
+      left:0;
+      .register_header{
+        font-size: 32px;
+        padding: 15px 0 20px 0;
+      }
+      .register_info{
+        >p{
+          input{
+            height:40px;
+            background-position:10px 8px!important;
+          }
+        }
+      }
+    }
+  }
+}
