--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -114,6 +114,9 @@
           width:175px;
           height:175px;
         }
+        .oneProduct_nav_img{
+          box-shadow:none;
+        }
       }
     }
     .product_sell,.product_recom{
