--- a/public/frontend/less/common/common.less
+++ b/public/frontend/less/common/common.less
@@ -117,17 +117,6 @@
         width:40px;
         height:40px;
       }
-      .topBar_menu{
-        display:none;
-        background:#fff;
-        position:absolute;
-        top:40px;
-        left:0;
-        li{
-          height:25px;
-          line-height:25px;
-        }
-      }
     }
     .search {
       width:180px;
@@ -178,6 +167,20 @@
         background-size: 16px 16px;
         position:relative;
         top:2px;
+      }
+    }
+  }
+  .toNav_dialog{
+    .el-dialog__header{
+      display:none;
+    }
+    .toNav_dialog_main{
+      //width:150px;
+      li{
+        height:40px;
+        line-height:40px;
+        text-align:center;
+        white-space:nowrap;
       }
     }
   }
