--- a/public/frontend/less/pages/contact.less
+++ b/public/frontend/less/pages/contact.less
@@ -19,7 +19,15 @@
     .emailUs,.callUs{
       display:inline-block;
       width:49%;
+      font-size:24px;
       text-align:center;
+      margin-top:150px;
+      >h4{
+        margin-bottom:20px;
+      }
+      >p{
+        font-weight:500;
+      }
     }
   }
 }
