--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -26,7 +26,7 @@
           text-align:center;
           padding:0 15px;
           border-top:2px solid #E8E8E8;
-          border-right:1px solid #ccc;
+          border-right:0.5px solid #fafafa;
           //margin:0 10px;
           float:left;
           //&:hover{
@@ -38,7 +38,7 @@
           //}
           .secondary{
             display:none;
-            height:30px;
+            height:40px;
             text-align:left;
             position:absolute;
             top:35px;
@@ -48,7 +48,7 @@
               line-height:20px;
               text-align:center;
               padding:0 5px;
-              margin:5px 10px;
+              margin:10px 10px;
               float:left;
               &:hover{
                 color:#fff;
