--- a/public/frontend/less/pages/register.less
+++ b/public/frontend/less/pages/register.less
@@ -73,7 +73,23 @@
       border: 1px solid transparent;
     }
   }
-};
+}
+.reSendEmail_dialog{
+  width:325px;
+  //height:240px;
+  margin:0 auto;
+  .reSendEmail_dialog_main{
+    overflow:hidden;
+    button{
+      display:block;
+      width:150px;
+      height:35px;
+      line-height:35px;
+      border-radius:20px;
+      margin:15px auto 20px auto;
+    }
+  }
+}
 
 //响应式布局
 @media screen and (max-width: 414px) {
