前端网站bug 样式修复

--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -100,11 +100,11 @@ table {
   position: relative;
 }
 #topBar .topBar_pc .logo {
-  width: 36px;
-  height: 30px;
+  width: 48px;
+  height: 40px;
   position: absolute;
-  top: 13px;
-  left: 78px;
+  top: 8px;
+  left: 310px;
 }
 #topBar .topBar_pc .topBar_menu {
   width: 560px;
@@ -115,17 +115,20 @@ table {
   cursor: pointer;
   height: 40px;
   line-height: 56px;
+  font-size: 18px;
   text-align: center;
-  margin: 0 30px;
+  margin: 0 22px;
   float: left;
   position: relative;
 }
 #topBar .topBar_pc .topBar_menu li:hover {
   color: #25ba80;
+  font-weight: 500;
   border-bottom: 1px solid #25ba80;
 }
 #topBar .topBar_pc .topBar_menu li.active {
   color: #25ba80;
+  font-weight: 500;
   border-bottom: 1px solid #25ba80;
 }
 #topBar .topBar_pc .topBar_right {
@@ -149,6 +152,7 @@ table {
 }
 #topBar .topBar_pc .topBar_right .search .search_icon {
   display: inline-block;
+  cursor: pointer;
   width: 15px;
   height: 15px;
   background: url('/images/search_icon.png') no-repeat;
@@ -293,7 +297,7 @@ table {
   margin: 0 0 20px 0;
 }
 #footer .subscribe {
-  width: 33%;
+  width: 32%;
 }
 #footer .subscribe .email_submit > input {
   width: 277px;
@@ -375,6 +379,12 @@ table {
   font-size: 16px;
   margin: 0 0 20px 0;
 }
+#footer .statement {
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  margin-top: 20px;
+}
 @media screen and (max-width: 414px) {
   #topBar {
     min-width: 100%;
@@ -395,7 +405,6 @@ table {
 }
 .el-dialog {
   padding: 15px 25px 0 25px;
-  margin: 0;
 }
 .el-dialog__header {
   font-weight: 300!important;
@@ -477,8 +486,12 @@ table {
 }
 #home_main .carouselArea {
   min-width: 100%;
-  height: 342px;
+  height: 300px;
+  margin-bottom: 42px;
   overflow: hidden;
+}
+#home_main .carouselArea img {
+  width: 100%;
 }
 #home_main .product_nav {
   width: 1120px;
@@ -578,6 +591,9 @@ table {
 @media screen and (max-width: 414px) {
   #home_main .carouselArea {
     height: 150px;
+  }
+  #home_main .carouselArea img {
+    width: 100%;
   }
   #home_main .product_nav {
     width: 100%;
