--- a/public/frontend/css/common/common.css
+++ b/public/frontend/css/common/common.css
@@ -7,11 +7,11 @@
   position: relative;
 }
 #topBar .topBar_pc .logo {
-  width: 36px;
-  height: 30px;
+  width: 48px;
+  height: 40px;
   position: absolute;
-  top: 13px;
-  left: 78px;
+  top: 8px;
+  left: 310px;
 }
 #topBar .topBar_pc .topBar_menu {
   width: 560px;
@@ -22,17 +22,20 @@
   cursor: pointer;
   height: 40px;
   line-height: 56px;
+  font-size: 18px;
   text-align: center;
-  margin: 0 30px;
+  margin: 0 22px;
   float: left;
   position: relative;
 }
 #topBar .topBar_pc .topBar_menu li:hover {
   color: #25ba80;
+  font-weight: 500;
   border-bottom: 1px solid #25ba80;
 }
 #topBar .topBar_pc .topBar_menu li.active {
   color: #25ba80;
+  font-weight: 500;
   border-bottom: 1px solid #25ba80;
 }
 #topBar .topBar_pc .topBar_right {
@@ -56,6 +59,7 @@
 }
 #topBar .topBar_pc .topBar_right .search .search_icon {
   display: inline-block;
+  cursor: pointer;
   width: 15px;
   height: 15px;
   background: url('/images/search_icon.png') no-repeat;
@@ -200,7 +204,7 @@
   margin: 0 0 20px 0;
 }
 #footer .subscribe {
-  width: 33%;
+  width: 32%;
 }
 #footer .subscribe .email_submit > input {
   width: 277px;
@@ -282,6 +286,12 @@
   font-size: 16px;
   margin: 0 0 20px 0;
 }
+#footer .statement {
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  margin-top: 20px;
+}
 @media screen and (max-width: 414px) {
   #topBar {
     min-width: 100%;
@@ -302,7 +312,6 @@
 }
 .el-dialog {
   padding: 15px 25px 0 25px;
-  margin: 0;
 }
 .el-dialog__header {
   font-weight: 300!important;
