--- a/public/frontend/css/pages/product_detail.css
+++ b/public/frontend/css/pages/product_detail.css
@@ -100,11 +100,11 @@ table {
   position: relative;
 }
 #topBar .topBar_pc .logo {
-  width: 36px;
-  height: 30px;
+  width: 48px;
+  height: 40px;
   position: absolute;
-  top: 13px;
-  left: 78px;
+  top: 8px;
+  left: 310px;
 }
 #topBar .topBar_pc .topBar_menu {
   width: 560px;
@@ -115,17 +115,20 @@ table {
   cursor: pointer;
   height: 40px;
   line-height: 56px;
+  font-size: 18px;
   text-align: center;
-  margin: 0 30px;
+  margin: 0 22px;
   float: left;
   position: relative;
 }
 #topBar .topBar_pc .topBar_menu li:hover {
   color: #25ba80;
+  font-weight: 500;
   border-bottom: 1px solid #25ba80;
 }
 #topBar .topBar_pc .topBar_menu li.active {
   color: #25ba80;
+  font-weight: 500;
   border-bottom: 1px solid #25ba80;
 }
 #topBar .topBar_pc .topBar_right {
@@ -149,6 +152,7 @@ table {
 }
 #topBar .topBar_pc .topBar_right .search .search_icon {
   display: inline-block;
+  cursor: pointer;
   width: 15px;
   height: 15px;
   background: url('/images/search_icon.png') no-repeat;
@@ -293,7 +297,7 @@ table {
   margin: 0 0 20px 0;
 }
 #footer .subscribe {
-  width: 33%;
+  width: 32%;
 }
 #footer .subscribe .email_submit > input {
   width: 277px;
@@ -375,6 +379,12 @@ table {
   font-size: 16px;
   margin: 0 0 20px 0;
 }
+#footer .statement {
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  margin-top: 20px;
+}
 @media screen and (max-width: 414px) {
   #topBar {
     min-width: 100%;
@@ -395,7 +405,6 @@ table {
 }
 .el-dialog {
   padding: 15px 25px 0 25px;
-  margin: 0;
 }
 .el-dialog__header {
   font-weight: 300!important;
@@ -488,8 +497,8 @@ table {
   margin: 0 0 10px 0;
 }
 #product_detail_main .productShow .picShow > p img {
-  width: 360px;
-  height: 360px;
+  width: 500px;
+  height: 500px;
 }
 #product_detail_main .productShow .picShow .picShowUl {
   display: inline-block;
@@ -646,8 +655,8 @@ table {
   right: 20px;
 }
 .addComment_dialog {
-  width: 450px;
-  height: 240px;
+  width: 480px;
+  height: 270px;
 }
 .addComment_dialog .addComment_dialog_main p img {
   cursor: pointer;
@@ -658,7 +667,7 @@ table {
 .addComment_dialog .addComment_dialog_main textarea {
   box-sizing: border-box;
   width: 100%;
-  height: 100px;
+  height: 130px;
   border-radius: 2px;
   border: solid 1px #cccccc;
   padding: 10px;
