--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -4,8 +4,12 @@
 #home_main{
   .carouselArea{
     min-width: 100%;
-    height: 342px;
+    height: 300px;
+    margin-bottom:42px;
     overflow:hidden;
+    img{
+      width:100%;
+    }
   }
   .product_nav{
     width:1120px;
@@ -103,6 +107,9 @@
   #home_main{
     .carouselArea {
       height: 150px;
+      img{
+        width:100%;
+      }
     }
     .product_nav{
       width:100%;
