--- a/public/frontend/less/pages/product.less
+++ b/public/frontend/less/pages/product.less
@@ -4,8 +4,12 @@
 #product_main{
   .carouselArea{
     min-width: 100%;
-    height: 342px;
+    height: 300px;
+    margin-bottom:42px;
     overflow:hidden;
+    img{
+      width:100%;
+    }
   }
   .product_list{
     color:#5a5a5a;
@@ -99,6 +103,9 @@
   #product_main{
     .carouselArea {
       height: 150px;
+      img{
+        width:100%;
+      }
     }
     .product_list{
       text-align:left;
