--- a/public/cms/less/common/common.less
+++ b/public/cms/less/common/common.less
@@ -233,7 +233,7 @@
 //弹出框 强改样式
 .el-dialog{
   padding:15px 25px 0 25px;
-  margin:0;
+  //margin:0;
 }
 .el-dialog__header{
   font-weight: 300!important;
